hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_mismatch3.php
<?hh

function f(): void {
  $b = dict<string, int>["6" => "6", "1" => 11, "2" => 12];
}
